text-white in list

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </button>
         </form>
 
-        <ul id="task-list" class="space-y-4">
+        <ul id="task-list" class="space-y-4 text-white">
             <p class="text-center text-gray-500 dark:text-gray-400 hidden text-lg" id="no-tasks-message">
                 No task added, Add a new one!
             </p>
